# dtc-ml-midterm-project

./: .env  .env.template  .gitignore  Dockerfile  README.md  model_production.joblib  pyproject.toml
Notebooks/: EDA.ipynb
Noteboook/my_keras_tuner/bank_marketing/: oracle.json
Noteboook/my_keras_tuner/bank_marketing/trial_00/: checkpoint.weights.h5  trial.json
Noteboook/my_keras_tuner/bank_marketing/trial_01/: checkpoint.weights.h5  trial.json
Noteboook/my_keras_tuner/bank_marketing/trial_02/: checkpoint.weights.h5  trial.json
Noteboook/my_keras_tuner/bank_marketing/trial_03/: checkpoint.weights.h5  trial.json
Noteboook/my_keras_tuner/bank_marketing/trial_04/: checkpoint.weights.h5  trial.json
Noteboook/my_keras_tuner/bank_marketing/trial_05/: checkpoint.weights.h5  trial.json
Noteboook/my_keras_tuner/bank_marketing/trial_06/: checkpoint.weights.h5  trial.json
Noteboook/my_keras_tuner/bank_marketing/trial_07/: checkpoint.weights.h5  trial.json
Noteboook/my_keras_tuner/bank_marketing/trial_08/: checkpoint.weights.h5  trial.json
Noteboook/my_keras_tuner/bank_marketing/trial_09/: checkpoint.weights.h5  trial.json
config/: config.yaml
src/: main.py  predict.py  train.py
